--- a/terraform/application/config/backend-dev.conf
+++ b/terraform/application/config/backend-dev.conf
@@ -1,4 +1,4 @@
-bucket = "infra-TODO"
+bucket = "dev-terraform-813871934424"
 key = "terraform.tfstate"
 region = "us-east-1"
-profile="tfmulti-dev"
+profile="tf_multi_dev"
