--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,24 +1,32 @@
 plugins {
-	id 'org.springframework.boot' version '2.3.4.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id 'java'
+  id 'org.springframework.boot' version '2.3.4.RELEASE'
+  id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+  id 'java'
 }
 
 group = 'jam.helloworld'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
+// For now targeting 1.8 but may change later
 sourceCompatibility = '1.8'
 
 repositories {
-	mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+  testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+  }
 }
 
 test {
-	useJUnitPlatform()
+  useJUnitPlatform()
 }
+
+// This can be use to make it explicit, 
+// but the JAR name will be implied from other args
+// bootJar {
+//   baseName = 'helloworld'
+//   version =  '1.0.0'
+// }
