--- a/terraform/infrastructure/config/backend-dev.conf
+++ b/terraform/infrastructure/config/backend-dev.conf
@@ -1,4 +1,4 @@
-bucket = "infra-TODO"
+bucket = "infra-dev-terraform-488905147906"
 key = "terraform.tfstate"
 region = "us-east-1"
 profile="tfmulti-infra"
