moving the secrets file so it automatically gets picked up

--- a/terraform/infrastructure/config/backend-dev.conf
+++ b/terraform/infrastructure/config/backend-dev.conf
@@ -1,4 +1,5 @@
-bucket = "infra-dev-terraform-488905147906"
+# I accidentally put this bucket in the wrong account, hence the unusual "-b" suffix
+bucket = "infra-dev-terraform-488905147906-b"
 key = "terraform.tfstate"
 region = "us-east-1"
 profile="tf_multi_infra"
