--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,4 @@
 # TODO: probably move this down one folder
-# TODO: Figure out if we can make this dynamic? We will need to use the outputs from TF
-#   Maybe pass dynamic buildspec instead of this static file... ?
-#   Or pass the ECR ID as its own env variable?
-# TODO: also somehow grab latest git SHA and add that as a tag (instead of latest)
 version: 0.2
 
 phases:
@@ -11,9 +7,10 @@ phases:
       java: corretto11
   build:
     commands:
-      - echo "Build started on `date` - not actually doing anything..."
+      - echo "Build started on `date`"
       - echo "Resolved source version is $CODEBUILD_RESOLVED_SOURCE_VERSION"
-      - echo "Source version is $CODEBUILD_SOURCE_VERSION"
+      - echo "Authenticating with docker..."
+      - echo "$DOCKER_TOKEN" | docker login --username jamsupremeteam
       - echo "ECR ID is $ECR_ID"
       - IMAGE_SHA=$(docker build . -q)
       - IMAGE_ID=$(echo "$IMAGE_SHA" | cut -d ":" -f 2)
