--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - echo "Build started on `date`"
       - echo "Resolved source version is $CODEBUILD_RESOLVED_SOURCE_VERSION"
       - echo "Authenticating with docker..."
-      - echo "$DOCKER_TOKEN" | docker login --username jamsupremeteam
+      - echo "$DOCKER_TOKEN" | docker login --username jamsupremeteam --password-stdin
       - echo "ECR ID is $ECR_ID"
       - IMAGE_SHA=$(docker build . -q)
       - IMAGE_ID=$(echo "$IMAGE_SHA" | cut -d ":" -f 2)
